--- a/package.json
+++ b/package.json
@@ -9,24 +9,20 @@
         "dev": "bun run --hot src/index.ts",
         "build": "bun build src/index.ts --outdir=dist --target=bun",
         "build:exe": "bun build --compile --minify-whitespace --minify-syntax --outfile server src/index.ts",
-        "start": "bun run dist/index.js",
-        "pm2:build": "bun run build:exe",
-        "pm2:start": "bun run build:exe && pm2 start pm2/ecosystem.config.js --env production",
-        "pm2:start:dev": "bun run build:exe && pm2 start pm2/ecosystem.config.js --env development",
-        "pm2:start:staging": "bun run build:exe && pm2 start pm2/ecosystem.config.js --env staging",
-        "pm2:stop": "pm2 stop i18n-api",
-        "pm2:restart": "pm2 restart i18n-api",
-        "pm2:delete": "pm2 delete i18n-api",
-        "pm2:logs": "pm2 logs i18n-api",
-        "pm2:monit": "pm2 monit",
-        "pm2:status": "pm2 status",
-        "pm2:reload": "pm2 reload i18n-api",
-        "pm2:save": "pm2 save",
-        "pm2:resurrect": "pm2 resurrect",
         "db:generate": "drizzle-kit generate",
         "db:migrate": "drizzle-kit migrate",
         "db:studio": "drizzle-kit studio",
-        "db:push": "drizzle-kit push"
+        "db:push": "drizzle-kit push",
+        "start": "./server",
+        "pm2:start": "pm2 start ecosystem.config.js",
+        "pm2:stop": "pm2 stop i18n-api",
+        "pm2:restart": "pm2 restart i18n-api",
+        "pm2:reload": "pm2 reload i18n-api",
+        "pm2:delete": "pm2 delete i18n-api",
+        "pm2:logs": "pm2 logs i18n-api",
+        "pm2:status": "pm2 status",
+        "pm2:monit": "pm2 monit",
+        "deploy": "./deploy.sh"
     },
     "dependencies": {
         "@elysiajs/bearer": "^1.1.4",
@@ -43,7 +39,6 @@
     "devDependencies": {
         "bun-types": "latest",
         "drizzle-kit": "^0.31.4",
-        "pm2": "^6.0.10",
         "tsx": "^4.20.5"
     }
 }
